--- a/index.html
+++ b/index.html
@@ -195,12 +195,12 @@
             <div class="image-left-text-block" style="margin-top: 10vh;" data-aos="zoom-in-right" data-aos-duration="500" data-aos-delay="600"> 
                 <h2 class="image-left-header" lang="en">Data Science course project</h2>
                 <p class="image-left-content" lang="en">
-                  Data Science Master Course project. A segmentation model was developed for the purpose of detecting the dessication of lakes or coastal erosion. The model in question is known as the DeepLabV3+ model. 
+                  Data Science Master Course project. A segmentation model was used for the purpose of detecting the dessication of lakes or coastal erosion. The model in question is known as the DeepLabV3+ model. 
                   The objective of the study was to detect water on RGB satellite images. The detection was then used to create a history of the amount of coastal erosion or dessication.
                 </p>
                 <h2 class="image-left-header" lang="de">Data Science Kurs projekt</h2>
                 <p class="image-left-content" lang="de">
-                  Data Science Masterkurs Projekt. Es wurde ein Segmentierungsmodell entwickelt, um die Austrocknung von Seen oder die Erosion von Küsten zu erkennen. 
+                  Data Science Masterkurs Projekt. Es wurde ein Segmentierungsmodell benutzt, um die Austrocknung von Seen oder die Erosion von Küsten zu erkennen. 
                   Das betreffende Modell ist als DeepLabV3+-Modell bekannt. Ziel der Studie war es, Wasser auf RGB-Satellitenbildern zu erkennen. Die Erkennung wurde dann verwendet, um eine Historie des Ausmaßes der Küstenerosion oder Austrocknung zu erstellen.
                 </p>
             </div>
