WIP and Not WOP

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </object>
           </div> 
             <div class="image-left-text-block" style="margin-top: 10vh;" data-aos="zoom-in-left" data-aos-duration="500" data-aos-delay="600"> 
-                <h2 class="image-left-header" lang="en">Master Thesis (WOP)</h2>
+                <h2 class="image-left-header" lang="en">Master Thesis (WIP)</h2>
                 <p class="image-left-content" lang="en">
                   The title of the master's thesis is "Physics-based Simulation of Autonomous Bubble Detection Based on Visual and Acoustic Sensing", it is written at the <a href="https://www.marum.de/index.html" target="_blank">MARUM</a>. 
                   The thesis involves the development of a simulation of an underwater environment in Unreal Engine 5.3. 
@@ -96,7 +96,7 @@
                   Additionally, a system for autonomous bubble detection is developed. The system utilises two U-Net models to segment sonar and camera images provided by the simulation.
                   (For more informations see the extended abstract (its still work in progress))
                 </p>
-                <h2 class="image-left-header" lang="de">Master Arbeit (WOP)</h2>
+                <h2 class="image-left-header" lang="de">Master Arbeit (WIP)</h2>
                 <p class="image-left-content" lang="de">
                   Der Titel der Masterarbeit lautet „Physics-based Simulation of Autonomous Bubble Detection Based on Visual and Acoustic Sensing“, sie wird beim <a href="https://www.marum.de/index.html" target="_blank">MARUM</a> geschrieben. 
                   Die Arbeit beinhaltet die Entwicklung einer Simulation einer Unterwasserumgebung in der Unreal Engine 5.3. 
